add author's name

--- a/requirements/requirements_mail.txt
+++ b/requirements/requirements_mail.txt
@@ -1,3 +1,8 @@
+Test project for Daikin job application
+***************************************
+
+
+
 Hi Chris,
 
 A test project, For this test case you need to provide us the result in git repo.
